Grammar/tumcadGrammarParser.java
// Generated from tumcadGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tumcadGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, Letter=30, Digit=31, 
		Boolean_value=32, Arithmetic_operator=33, Comparison_operator=34, Logical_operator=35, 
		Assignment_operator=36, WS=37, TEXT=38;
	public static final int
		RULE_program = 0, RULE_program_body = 1, RULE_set_of_statements = 2, RULE_basic_statements = 3, 
		RULE_if_statement = 4, RULE_for_each = 5, RULE_read_excelfile = 6, RULE_read_textfile = 7, 
		RULE_calculate_area = 8, RULE_sketch = 9, RULE_variable_declaration = 10, 
		RULE_variable_initialization = 11, RULE_function_call = 12, RULE_name = 13, 
		RULE_list_name = 14, RULE_value = 15, RULE_integer_value = 16, RULE_double_value = 17, 
		RULE_type = 18, RULE_function_declaration = 19, RULE_function_body = 20, 
		RULE_function_parameters = 21, RULE_list_declaration = 22, RULE_expression = 23, 
		RULE_number_expression = 24, RULE_string_expression = 25, RULE_boolean_expression = 26, 
		RULE_operator = 27, RULE_string_value = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_body", "set_of_statements", "basic_statements", "if_statement", 
			"for_each", "read_excelfile", "read_textfile", "calculate_area", "sketch", 
			"variable_declaration", "variable_initialization", "function_call", "name", 
			"list_name", "value", "integer_value", "double_value", "type", "function_declaration", 
			"function_body", "function_parameters", "list_declaration", "expression", 
			"number_expression", "string_expression", "boolean_expression", "operator", 
			"string_value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'START TUMCAD'", "'FINISH'", "'Return'", "'if'", "'('", "')'", 
			"'{'", "'}'", "'else'", "'foreach'", "'in'", "'readXLS'", "'readTXT'", 
			"'area'", "'sketch'", "'='", "'_'", "'[]'", "'.'", "'Int'", "'Double'", 
			"'String'", "'Bool'", "'Void'", "'Func'", "'void'", "','", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Letter", "Digit", "Boolean_value", 
			"Arithmetic_operator", "Comparison_operator", "Logical_operator", "Assignment_operator", 
			"WS", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tumcadGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tumcadGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program_bodyContext program_body() {
			return getRuleContext(Program_bodyContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			program_body();
			setState(60);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_bodyContext extends ParserRuleContext {
		public List<Set_of_statementsContext> set_of_statements() {
			return getRuleContexts(Set_of_statementsContext.class);
		}
		public Set_of_statementsContext set_of_statements(int i) {
			return getRuleContext(Set_of_statementsContext.class,i);
		}
		public Program_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterProgram_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitProgram_body(this);
		}
	}

	public final Program_bodyContext program_body() throws RecognitionException {
		Program_bodyContext _localctx = new Program_bodyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << Letter) | (1L << Digit) | (1L << Arithmetic_operator) | (1L << Comparison_operator) | (1L << Logical_operator) | (1L << Assignment_operator) | (1L << WS) | (1L << TEXT))) != 0)) {
				{
				{
				setState(62);
				set_of_statements();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_of_statementsContext extends ParserRuleContext {
		public Basic_statementsContext basic_statements() {
			return getRuleContext(Basic_statementsContext.class,0);
		}
		public Variable_initializationContext variable_initialization() {
			return getRuleContext(Variable_initializationContext.class,0);
		}
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public Set_of_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_of_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterSet_of_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitSet_of_statements(this);
		}
	}

	public final Set_of_statementsContext set_of_statements() throws RecognitionException {
		Set_of_statementsContext _localctx = new Set_of_statementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_set_of_statements);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				basic_statements();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				variable_initialization();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(70);
				variable_declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(71);
				function_declaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(72);
				function_call();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				expression();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(74);
				operator();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(75);
				match(T__2);
				setState(76);
				expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Basic_statementsContext extends ParserRuleContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public For_eachContext for_each() {
			return getRuleContext(For_eachContext.class,0);
		}
		public Read_excelfileContext read_excelfile() {
			return getRuleContext(Read_excelfileContext.class,0);
		}
		public Read_textfileContext read_textfile() {
			return getRuleContext(Read_textfileContext.class,0);
		}
		public Calculate_areaContext calculate_area() {
			return getRuleContext(Calculate_areaContext.class,0);
		}
		public SketchContext sketch() {
			return getRuleContext(SketchContext.class,0);
		}
		public Basic_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basic_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterBasic_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitBasic_statements(this);
		}
	}

	public final Basic_statementsContext basic_statements() throws RecognitionException {
		Basic_statementsContext _localctx = new Basic_statementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_basic_statements);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				if_statement();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				for_each();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				read_excelfile();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				read_textfile();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				calculate_area();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(84);
				sketch();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public Boolean_expressionContext boolean_expression() {
			return getRuleContext(Boolean_expressionContext.class,0);
		}
		public List<Set_of_statementsContext> set_of_statements() {
			return getRuleContexts(Set_of_statementsContext.class);
		}
		public Set_of_statementsContext set_of_statements(int i) {
			return getRuleContext(Set_of_statementsContext.class,i);
		}
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterIf_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitIf_statement(this);
		}
	}

	public final If_statementContext if_statement() throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_if_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__3);
			setState(88);
			match(T__4);
			setState(89);
			boolean_expression();
			setState(90);
			match(T__5);
			setState(91);
			match(T__6);
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				set_of_statements();
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << Letter) | (1L << Digit) | (1L << Arithmetic_operator) | (1L << Comparison_operator) | (1L << Logical_operator) | (1L << Assignment_operator) | (1L << WS) | (1L << TEXT))) != 0) );
			setState(97);
			match(T__7);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(98);
				match(T__8);
				setState(99);
				match(T__6);
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(100);
					set_of_statements();
					}
					}
					setState(103); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << Letter) | (1L << Digit) | (1L << Arithmetic_operator) | (1L << Comparison_operator) | (1L << Logical_operator) | (1L << Assignment_operator) | (1L << WS) | (1L << TEXT))) != 0) );
				setState(105);
				match(T__7);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_eachContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public List_nameContext list_name() {
			return getRuleContext(List_nameContext.class,0);
		}
		public Set_of_statementsContext set_of_statements() {
			return getRuleContext(Set_of_statementsContext.class,0);
		}
		public For_eachContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_each; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterFor_each(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitFor_each(this);
		}
	}

	public final For_eachContext for_each() throws RecognitionException {
		For_eachContext _localctx = new For_eachContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_for_each);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__9);
			setState(113);
			variable_declaration();
			setState(114);
			match(T__10);
			setState(115);
			list_name();
			setState(116);
			match(T__6);
			setState(117);
			set_of_statements();
			setState(118);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_excelfileContext extends ParserRuleContext {
		public String_valueContext string_value() {
			return getRuleContext(String_valueContext.class,0);
		}
		public Read_excelfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_excelfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterRead_excelfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitRead_excelfile(this);
		}
	}

	public final Read_excelfileContext read_excelfile() throws RecognitionException {
		Read_excelfileContext _localctx = new Read_excelfileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_read_excelfile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__11);
			setState(121);
			match(T__4);
			setState(122);
			string_value();
			setState(123);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_textfileContext extends ParserRuleContext {
		public String_valueContext string_value() {
			return getRuleContext(String_valueContext.class,0);
		}
		public Read_textfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_textfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterRead_textfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitRead_textfile(this);
		}
	}

	public final Read_textfileContext read_textfile() throws RecognitionException {
		Read_textfileContext _localctx = new Read_textfileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_read_textfile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__12);
			setState(126);
			match(T__4);
			setState(127);
			string_value();
			setState(128);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Calculate_areaContext extends ParserRuleContext {
		public Read_excelfileContext read_excelfile() {
			return getRuleContext(Read_excelfileContext.class,0);
		}
		public Read_textfileContext read_textfile() {
			return getRuleContext(Read_textfileContext.class,0);
		}
		public List_nameContext list_name() {
			return getRuleContext(List_nameContext.class,0);
		}
		public Calculate_areaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calculate_area; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterCalculate_area(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitCalculate_area(this);
		}
	}

	public final Calculate_areaContext calculate_area() throws RecognitionException {
		Calculate_areaContext _localctx = new Calculate_areaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_calculate_area);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__13);
			setState(131);
			match(T__4);
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(132);
				read_excelfile();
				}
				break;
			case T__12:
				{
				setState(133);
				read_textfile();
				}
				break;
			case T__16:
			case Letter:
				{
				setState(134);
				list_name();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(137);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SketchContext extends ParserRuleContext {
		public Read_excelfileContext read_excelfile() {
			return getRuleContext(Read_excelfileContext.class,0);
		}
		public Read_textfileContext read_textfile() {
			return getRuleContext(Read_textfileContext.class,0);
		}
		public List_nameContext list_name() {
			return getRuleContext(List_nameContext.class,0);
		}
		public SketchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sketch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterSketch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitSketch(this);
		}
	}

	public final SketchContext sketch() throws RecognitionException {
		SketchContext _localctx = new SketchContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sketch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__14);
			setState(140);
			match(T__4);
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				{
				setState(141);
				read_excelfile();
				}
				break;
			case T__12:
				{
				setState(142);
				read_textfile();
				}
				break;
			case T__16:
			case Letter:
				{
				setState(143);
				list_name();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(146);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitVariable_declaration(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			type();
			setState(149);
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_initializationContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Variable_initializationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_initialization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterVariable_initialization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitVariable_initialization(this);
		}
	}

	public final Variable_initializationContext variable_initialization() throws RecognitionException {
		Variable_initializationContext _localctx = new Variable_initializationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_variable_initialization);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			name();
			setState(152);
			match(T__15);
			setState(153);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Function_parametersContext function_parameters() {
			return getRuleContext(Function_parametersContext.class,0);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitFunction_call(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_function_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			name();
			setState(156);
			match(T__4);
			setState(157);
			function_parameters();
			setState(158);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public List<TerminalNode> Letter() { return getTokens(tumcadGrammarParser.Letter); }
		public TerminalNode Letter(int i) {
			return getToken(tumcadGrammarParser.Letter, i);
		}
		public List<TerminalNode> Digit() { return getTokens(tumcadGrammarParser.Digit); }
		public TerminalNode Digit(int i) {
			return getToken(tumcadGrammarParser.Digit, i);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tumcadGrammarListener ) ((tumcadGrammarListener)listener).exitName(this);
		}
	}
